--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="description" content="PHYS" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
-    <style type="text/css" media="screen">
-      @import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Source+Code+Pro:wght@400;600&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KQSEMBSVM6"></script>
     <script>
